[package]
name = "Axolotl"
version = "0.1.0"
edition = "2021" # Year for Rust version

[dependencies]
blazesym = {version="0.2.0-rc.4", features=["tracing"]}
clap = {version="4.5", features=["derive"]}
libbpf-rs = "0.24"
libc = "*"
nix = { version = "0.29", features = ["net"] }
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["ansi", "env-filter", "fmt"]}
plain = "0.2.3"

[build-dependencies]
libbpf-cargo="0.24"